fix: support dynamic LLM provider selection and add .env documentation
Fixes:
- ApplicationContext now dynamically selects LLM provider (Anthropic/Zhipu)
- Prioritizes enabled providers with valid API keys
- Reads ZHIPU_API_KEY from .env file correctly

Documentation:
- Updated README with .env file usage instructions
- Added Java --enable-preview flag requirement
- Added multiple startup methods (Maven, background, IDE)

Testing:
✓ Application starts successfully with ZHIPU_API_KEY from .env
✓ All components initialized
✓ HTTP server listening on port 8080
✓ Health endpoints operational

Files changed:
- ApplicationContext.java: Dynamic LLM provider selection
- README.md: Complete .env and startup documentation
- log.log: Implementation details

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>